--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: fundamentos_app
+name: iotaquicultura
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -18,13 +18,11 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  font_awesome_flutter: ^8.12.0
-  charts_flutter: ^0.10.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -34,6 +32,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  syncfusion_flutter_charts: ^19.2.47+1
+  font_awesome_flutter: ^9.1.0
+  flutter_svg: ^0.22.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -49,7 +50,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
