--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/thermometer/
+    - assets/electricity/
+    - assets/oxygen/
+    - assets/shrimp/
+    - assets/svgs/
+    - assets/fish/
+    - assets/logo/
+    - assets/ph/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
