--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   syncfusion_flutter_charts: ^19.2.47+1
-  font_awesome_flutter: ^9.1.0
-  flutter_svg: ^0.22.0
+  syncfusion_flutter_gauges: ^19.2.47
+  http: ^0.13.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -50,6 +50,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/thermometer/
+    - assets/temperature/
     - assets/electricity/
     - assets/oxygen/
     - assets/shrimp/
